# NeoStats-gameserv

./: .gitattributes  ChangeLog  Makefile.am  Makefile.in  README.GamesServ  RELNOTES  RELNOTES.win32.txt  bomb.c  bomb_help.c  common.c  configure  configure.in  gamesserv.c  gamesserv.h  gamesserv.sln  gamesserv.vcproj  gamesserv_help.c  hilo.c  hilo_help.c  modconfig.h.in  pulse.xml  russian.c  russian_help.c  ttt.c  ttt_help.c
win32/: GamesServ.qsp  buildwin32snap.bat  neostatsversion.rc
